change skills name

--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
                 </li>
                 <li>
                     <i class="fa-solid fa-signal section-icon"></i><strong>Data Visualization</strong>
-                    <p>Power BI, Looker, Streamlit</p>
+                    <p>Power BI, Looker, Matplotlib, Seaborn, Streamlit</p>
                 </li>
                 <li>
-                    <i class="fa-solid fa-database section-icon"></i><strong>Databases</strong>
-                    <p>SQLite, SQL Server</p>
+                    <i class="fa-solid fa-database section-icon"></i><strong>Statistics and Machine Learning</strong>
+                    <p>In progress</p>
                 </li>
                 <li>
                     <i class="fa-solid fa-gear section-icon"></i></i><strong>Software Engineering</strong>
-                    <p>Git</p>
+                    <p>GitHub, Streamlit Cloud</p>
                 </li>
 
 
